--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MI PRIMERA WEP</title>
+    <title>mi lista html</title>
 </head>
-<body>
-   <h1>hola mundo</h1>
+<body> <h1>lista de etiquetas html </h1>
+    <ul>
+     <li>(p) .- Para agregar un parrafo</li>
+     <li>(h1) .- para agregar un titulo</li>
+     <li>(h2) .- para agregar un subtitulo</li>
+     <li>(img) .- para agegar una imagen</li>
+ 
+   </ul>
 </body>
 </html>
