--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
      <li>(h1) .- para agregar un titulo</li>
      <li>(h2) .- para agregar un subtitulo</li>
      <li>(img) .- para agegar una imagen</li>
- 
    </ul>
+   <ol>
+    <li>git add . ( para añadir cambios)</li>
+    <li> git commit -m "mi mensaje" (para guardar cambios)</li>
+    <li>git (para subir cambios)</li>
+   </ol>
+   <h2>IMAGENES</h2>
+   <img src="imagenes/imagen.webp" width="1000px">
 </body>
 </html>
