--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
     <li> git commit -m "mi mensaje" (para guardar cambios)</li>
     <li>git (para subir cambios)</li>
    </ol>
-   <h2>IMAGENES</h2>
-   <img src="imagenes/imagen.webp" width="1000px">
+   <img src="imagenes/imagen.webp" width="1000px" height="auto" title="pocoyo">
+   
+   <iframe width="560" 
+   height="315" 
+   src="https://www.youtube.com/embed/9flXyzcSfT4?si=pQNYe83JVfJTdS-c" 
+   title="YouTube video player" 
+   frameborder="0" 
+   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<p><b>Gran Muralla China</b> es una antigua fortificación <strong>china</strong>, construida y reconstruida entre el <em>siglo v a. C.</em> y el siglo <u>xvi</u> para proteger la frontera <i>norte del Imperio chino</i> durante las sucesivas dinastías imperiales de los ataques de los nómadas xiongnu de Mongolia y Manchuria.</br>
+
+    Contando sus ramificaciones y construcciones secundarias, se calcula que tiene unos 21 200 km de longitud, desde la frontera con Corea, al borde del río Yalu, hasta el desierto de Gobi, a lo largo de un arco que delinea aproximadamente el borde sur de Mongolia Interior, aunque hoy solo se conserva un 30 % de ella.</br>En promedio, mide de 6 a 7 m de alto y de 4 a 5 m de ancho.
+    
+    La muralla fue designada Patrimonio de la Humanidad por la Unesco en 1987.</p>
+    <a href="https://www.youtube.com/watch?v=UA0YaA06Puo"></a>
 </body>
 </html>
